Реализация создание .exe файла.